Updated the upload and download fileserverserviceimpl using cache and hashmap datastructure for better performance